--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,7 @@ astropy = ">=5.1"
 surveycodex = "^1.2.0"
 matplotlib = ">=3.7.1"
 scikit-image = ">=0.20.0"
-scipy = ">=1.9.1"
+scipy = ">=1.9.0"
 tqdm = ">=4.65.0"
 sep = ">=1.2.1"
 galsim = ">=2.4.9"
@@ -72,8 +72,8 @@ build-backend = "poetry.core.masonry.api"
 requires = [
   "poetry-core>=1.0.0",
   "setuptools",
-  "numpy",
-  "cython",
+  #"numpy",
+  #"cython",
   "pybind11>=2.6.0",
   "wheel",
 ]
